fix for issue about font size while scrolling on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,11 +27,12 @@
     font-family: 'Tangerine', serif;
     font-size: 54px;
     color: #fff;
-    padding: 30px 0 20px 20px;
+    padding: 20px 0;
 }
 @media screen and (min-width: 520px) {
     .navbar-brand {
         font-size: 80px;
+        padding: 30px 0 20px 20px;
     }
 }
 
